# Guuber-Tech

./: .gitignore  package-lock.json  readme.md
backend/: Makefile  README.md  pyproject.toml
backend/blog_api/: __init__.py  config.py  database.py  models.py
backend/blog_api/sql/: __init__.py  create_blogs.sql  delete_blog_by_id.sql  fetch_blog_by_id.sql  fetch_title_and_id.sql  get_id_from_row.sql
cross-frontend/: package-lock.json  package.json
cross-frontend/apps/expo/: app.json  package.json
frontend/: app.json  package-lock.json  package.json
frontend/public/: global.css
frontend/src/: App.svelte
frontend/src/components/: Button.svelte  Card.svelte  FeedbackForm.svelte  FeedbackItem.svelte  FeedbackList.svelte  FeedbackStats.svelte  RatingSelect.svelte
frontend/stacks/main/: Main.tsx
gt-backend/: README.md
gt-backend/blog_api/: __init__.py  api.py  config.py  database.py
gt-backend/blog_api/sql/: add_blog.sql  create_blogs.sql  fetch_title_and_id.sql  update_blog_by_id.sql
gt-frontend/: App.tsx  package-lock.json  package.json
gt-frontend/stacks/blog/: Blog.tsx
