[project]
name = "blog-api"
description = "Run this package to use the blog api."
authors = [
    {name = "Noah Everett", email = "noahceverett@gmail.com" }
]
requires-python = ">= 3.8"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "blog_api.__version__"}
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

